--- a/Assets/Scripts/Applications/Applications.asmdef
+++ b/Assets/Scripts/Applications/Applications.asmdef
@@ -6,7 +6,9 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:f7014198ed8e4bf47b59164b5f314cd2",
-        "GUID:a3d1ea7d43e24994f9a99ddcb74e5ede"
+        "GUID:a3d1ea7d43e24994f9a99ddcb74e5ede",
+        "GUID:0125e4e19ee06b04c815fffd90552ad7",
+        "GUID:7a70f707410d78342b6033d9a56d79d0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
