--- a/Assets/Scripts/GameData/GameData.asmdef
+++ b/Assets/Scripts/GameData/GameData.asmdef
@@ -1,12 +1,9 @@
 {
-    "name": "Logics",
+    "name": "GameData",
     "rootNamespace": "",
     "references": [
         "GUID:a3d1ea7d43e24994f9a99ddcb74e5ede",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:7a70f707410d78342b6033d9a56d79d0",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
